--- a/20240703/shadow.html
+++ b/20240703/shadow.html
@@ -65,6 +65,9 @@
         height: 200px;
         background-color: olive;
         border-radius: 20px 20px 0 0;
+        background-image: url(../images/우주.jfif);
+        background-size: cover;
+        color: #fff;
       }
       .space .space-title {
         text-align: center;
