--- a/20240703/css.html
+++ b/20240703/css.html
@@ -10,7 +10,7 @@
       }
       .container {
         width: 600px;
-        margin: 0 auto;
+        margin: 0 20px 0 20px;
       }
       ul {
         list-style: none;
@@ -42,7 +42,7 @@
       }
       .container2 {
         width: 600px;
-        margin: 50px auto;
+        margin: 0;
         border: 2px solid purple;
       }
       .img-box {
