미디어쿼리

--- a/20240704/blue_bottle.html
+++ b/20240704/blue_bottle.html
@@ -13,6 +13,9 @@
   <body>
     <header>
       <div class="utility-wrap">
+        <div class="menu-icon">
+          <i class="fa-solid fa-bars fa-2x"></i>
+        </div>
         <div class="logo">
           <a href="https://www.bluebottlecoffeekorea.com/">
             <img src="../images/bluebottle.svg" alt="Logo" />
