20240705 + 주택공사 실습

--- a/20240704/blue_bottle.html
+++ b/20240704/blue_bottle.html
@@ -21,7 +21,7 @@
             <img src="../images/bluebottle.svg" alt="Logo" />
           </a>
         </div>
-        <span>
+        <span class="menu-item">
           <a href="">ABOUT</a>
           <ul class="submenu">
             <li><a href="#">Our Story</a></li>
@@ -39,7 +39,7 @@
             <li><a href="#">Merchandise</a></li>
           </ul>
         </span>
-        <span>
+        <span class="menu-item">
           <a href="">COMPANY</a>
           <ul class="submenu">
             <li><a href="#">Contact</a></li>
