--- a/20240705/dropDown.html
+++ b/20240705/dropDown.html
@@ -13,6 +13,7 @@
       .whole-wrap {
         display: flex;
         flex-direction: column;
+        align-items: center;
       }
       .wrap {
         display: flex;
