--- a/한국주택공사 웹사이트 실습/hf.html
+++ b/한국주택공사 웹사이트 실습/hf.html
@@ -105,7 +105,82 @@
             </a>
           </div>
         </div>
+        <div class="page-wrap">
+          <span class="page-btn">
+            <button class="current-page"><span></span></button>
+            <button><span></span></button>
+          </span>
+        </div>
       </section>
     </div>
+    <div class="category-container">
+      <div class="category-wrap">
+        <div class="category">
+          <div class="category-img">
+            <a href="#"><i class="icon icon01"></i></a>
+          </div>
+          <p class="category-txt">대출상환조회</p>
+        </div>
+        <div class="category">
+          <div class="category-img">
+            <a href="#"><i class="icon icon01"></i></a>
+          </div>
+          <p class="category-txt">대출상환조회</p>
+        </div>
+        <div class="category">
+          <div class="category-img">
+            <a href="#"><i class="icon icon01"></i></a>
+          </div>
+          <p class="category-txt">대출상환조회</p>
+        </div>
+        <div class="category">
+          <div class="category-img">
+            <a href="#"><i class="icon icon01"></i></a>
+          </div>
+          <p class="category-txt">대출상환조회</p>
+        </div>
+        <div class="category">
+          <div class="category-img">
+            <a href="#"><i class="icon icon01"></i></a>
+          </div>
+          <p class="category-txt">대출상환조회</p>
+        </div>
+        <div class="category">
+          <div class="category-img">
+            <a href="#"><i class="icon icon01"></i></a>
+          </div>
+          <p class="category-txt">대출상환조회</p>
+        </div>
+        <div class="category">
+          <div class="category-img">
+            <a href="#"><i class="icon icon01"></i></a>
+          </div>
+          <p class="category-txt">대출상환조회</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="inform-container">
+      <div class="inform-wrap">
+        <div class="inform-card-left">1</div>
+        <div class="inform-card-left">1</div>
+        <div class="inform-wrap-right">
+          <div class="inform-card-right"></div>
+          <div class="inform-card-right"></div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="footer-des">CONNECT WITH US</div>
+      <div class="logo-wrap">
+        <div class="footer-logo">
+          <i class="fa-brands fa-instagram fa-2x"></i>
+        </div>
+        <div class="footer-logo">
+          <i class="fa-brands fa-facebook-f fa-2x"></i>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
