주택공사 실습

--- a/한국주택공사 웹사이트 실습/hf.html
+++ b/한국주택공사 웹사이트 실습/hf.html
@@ -84,7 +84,7 @@
               </span>
             </a>
           </div>
-          <div class="card">
+          <div class="card" id="transCard">
             <a href="#">
               <span>
                 <p class="title">u-보금자리론</p>
