--- a/20240709/이벤트.html
+++ b/20240709/이벤트.html
@@ -10,7 +10,7 @@
       src="../images/벚꽃.jpg"
       alt=""
       id="pic"
-      style="width: 300px; margin: 0 auto"
+      style="width: 300px; position: relative; left: -50px"
     />
     <script>
       let pic = document.querySelector("#pic");
