Your commit message

--- a/20240710/노드추가.html
+++ b/20240710/노드추가.html
@@ -23,6 +23,14 @@
         document.getElementById("info").appendChild(newP);
         // document.body.appendChild(newP);
       }
+      if (event.key === "Enter") {
+        addContents();
+      }
+      // function enterKey() {
+      //   if (window.event.keyCode == 13) {
+      //     addContents();
+      //   }
+      // }
     </script>
   </body>
 </html>
