--- a/JS 50예제/no2_progress.html
+++ b/JS 50예제/no2_progress.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Progress Steps</title>
     <style>
-      @import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+      @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
       :root {
         --line-border-fill: #3498db;
@@ -19,7 +19,7 @@
 
       body {
         background-color: #f1f1f1;
-        font-family: "Muli", sans-serif;
+        font-family: 'Muli', sans-serif;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -42,7 +42,7 @@
       }
 
       .progress-container::before {
-        content: "";
+        content: '';
         background-color: var(--line-border-empty);
         position: absolute;
         top: 50%;
@@ -122,14 +122,14 @@
       <button class="btn" id="next">Next</button>
     </div>
     <script>
-      const progress = document.getElementById("progress");
-      const circles = document.querySelectorAll(".circle");
-      const prev = document.getElementById("prev");
-      const next = document.getElementById("next");
+      const progress = document.getElementById('progress');
+      const circles = document.querySelectorAll('.circle');
+      const prev = document.getElementById('prev');
+      const next = document.getElementById('next');
 
       let currentActive = 1;
 
-      next.addEventListener("click", () => {
+      next.addEventListener('click', () => {
         currentActive++;
 
         if (currentActive > circles.length) {
@@ -138,7 +138,7 @@
         update();
       });
 
-      prev.addEventListener("click", () => {
+      prev.addEventListener('click', () => {
         currentActive--;
 
         if (currentActive < 1) {
@@ -150,15 +150,15 @@
       function update() {
         circles.forEach((circle, idx) => {
           if (idx < currentActive) {
-            circle.classList.add("active");
+            circle.classList.add('active');
           } else {
-            circle.classList.remove("active");
+            circle.classList.remove('active');
           }
         });
-        const actives = document.querySelectorAll(".active");
+        const actives = document.querySelectorAll('.active');
 
         progress.style.width =
-          ((actives.length - 1) / (circles.length - 1)) * 100 + "%";
+          ((actives.length - 1) / (circles.length - 1)) * 100 + '%';
 
         if (currentActive === 1) {
           prev.disabled = true;
